--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,11 @@
 body{
     background: linear-gradient(135deg, rgba(218,40,167,1) 13%, rgba(194,40,78,1) 49%);
     background-repeat: no-repeat;
-    height: 1000px;
+    height: 62.5rem;
 }
 
 .dislike{
-    height: 80px;
+    height: 5rem;
     width: 5%;
     border-radius: 100%;
     border: none;
@@ -17,7 +17,7 @@ body{
 }
 
 .like{
-    height: 80px;
+    height: 5rem;
     width: 5%;
     border-radius: 100%;
     border: none;
@@ -33,16 +33,30 @@ body{
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    gap: 50px;
+    gap: 3.125rem;
 }
 
 .card{
-    border-radius: 50px;
-    width: 500px;
-    height: 700px;
+    border-radius: 3.125rem;
+    width: 31.25rem;
+    height: 43.75rem;
     background-color: white;
 }
 
 .stats{
-    
+    position: relative;
+    left: 43rem;
+    top: 2.5rem;
+    padding: 0.625rem 0.625rem 0.625rem 0.625rem;
+    border: 0.125rem solid #DCCCA3;
+    background-color: transparent;
+    font-weight: 600;
+    color: #DCCCA3;
+    border-radius: 3.125rem;
+}
+
+.stats:hover{
+    background-color: #DCCCA3;
+    border: 0.125rem solid none;
+    color: #C2284E;
 }
